logs/Slang/generic/iface/iface_class_test_5.sv.log
name: iface_class_test_5
description: Test
should_fail: 0
tags: 8.3 8.26
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/iface/iface_class_test_5.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/iface/iface_class_test_5.sv:7:1: error: language feature not yet supported
interface class base_ic #(int N = 8) extends pkg1::base1, base2#(N);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
